<?xml version="1.0" encoding="utf-8"?>
<!--suppress CheckTagEmptyBody -->
<resources>
    <string name="app_name">Dawn Down Alarm</string>
    <string name="icon_description">app icon</string>
    <string name="hint">Input Alarm Keyword. (e.g.: Alert)</string>
    <string name="active_time">Active Time: %02d:%02d ~ %02d:%02d</string>

    <string name="grant_button_description">Grant Permission</string>
    <string name="grant_description">Please grant <b>Notification Access</b> permission \non <b>Dawn Down Alarm!</b></string>
    <string name="alarm_description">PUSH <b>%1$d TIMES</b> TO KILL ALARM</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="close">Close Application</string>
    <string name="apps">Apps</string>

    <string name="search_hint">App Name, Keyword</string>
    <string name="enabled">Enabled</string>
    <string name="has_keywords">Keywords</string>

    <string name="able_app">%s App</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="delete_all_keywords">Delete All Keywords</string>

    <string name="info">Info</string>
    <string name="version">Version</string>
    <string name="check_for_update">Check For Update</string>
    <string name="feedback">Send Feedback</string>
    <string name="license">Open Source License</string>

    <string name="settings">Settings</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="vibration">Vibration</string>
    <string name="test">Test</string>
    <string name="test_notification">TEST ALARM\nThis is a test alarm to confirm user settings</string>

    <string name="next">Next</string>
    <string name="help_label">Help</string>
    <string name="help_title">Doesn\'t the Alarm Work?</string>
    <array name="help_image">
        <item>@drawable/grant_permission</item>
        <item>@drawable/show_notifications</item>
    </array>
    <string-array name="help_title">
        <item>Allow Notification Access</item>
        <item>Allow Application Notification</item>
    </string-array>
    <string-array name="help_body">
        <item>Press \"Grant Permission\" Button,\nCheck \"Dawn Down Alarm\"</item>
        <item>Press \"Allow Notification\" Button,\nCheck \"Show notifications\"</item>
    </string-array>
    <string-array name="help_button">
        <item>Grant Permission</item>
        <item>Allow Notification</item>
    </string-array>
</resources>
