<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/appListFragment">

    <fragment
        android:id="@+id/appListFragment"
        android:name="com.roomedia.dawn_down_alarm.presentation.view.fragment.AppListFragment"
        android:label="@string/apps"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.roomedia.dawn_down_alarm.presentation.view.fragment.HelpFragment"
        android:label="@string/help_label"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.roomedia.dawn_down_alarm.presentation.view.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@xml/root_preferences" />
</navigation>