<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/iconImageView"
            app:layout_constraintStart_toStartOf="@+id/iconImageView"
            app:layout_constraintTop_toBottomOf="@+id/iconImageView"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/notificationTextView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:isScrollContainer="true"
            android:keepScreenOn="true"
            android:overScrollMode="ifContentScrolls"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:text="@string/dummy_notification_3" />

        <Button
            android:id="@+id/awakeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/alarm_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>